<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    android:orientation="vertical"
    android:background="@color/white"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
       >
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
    <ImageView
        android:layout_width="100sp"
        android:layout_height="100sp"
        android:layout_marginStart="150sp"
        android:layout_marginTop="10dp"
        android:src="@drawable/companylogo">
    </ImageView>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10sp"
        android:text="@string/sign_in_now"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="20sp"
        android:textColor="@color/black">

    </TextView>

    <TextView
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="0dp"
        android:text="@string/please_fill_the_details_and_create_account"
        android:textColor="#545252"
        android:textSize="13sp"
        android:minHeight="48dp"
        android:letterSpacing="0.02"
        >
    </TextView>
        <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:layout_marginHorizontal="20dp"
        app:helperText="required"
        app:helperTextTextColor="@color/design_default_color_error"
        android:hint="@string/full_name"
            app:hintTextColor="#ff4d66"
            app:boxStrokeColor="#ff4d66">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/f_name"
            android:lines="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:inputType="text"
            >

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginHorizontal="20dp"
            app:helperText="required"
            app:helperTextTextColor="@color/design_default_color_error"
            android:hint="@string/email"
            app:hintTextColor="#ff4d66"
            app:boxStrokeColor="#ff4d66">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:lines="1"
                >

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginHorizontal="20dp"
            app:helperText="required"
            app:helperTextTextColor="@color/design_default_color_error"
            app:hintTextColor="#ff4d66"
            app:boxStrokeColor="#ff4d66"
            app:counterEnabled="true"
            app:counterMaxLength="10"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/black"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_toggle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:maxLength="10"
                android:lines="1"
                >

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
    <TextView
        android:layout_gravity="start"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_must_be_atleast_8_characters_long"
        android:textColor="#696767"
        android:layout_marginStart="30sp"
        android:layout_marginTop="10sp"
        >
    </TextView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hobby"
                android:textSize="15sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginStart="15sp"
                android:letterSpacing="0.09"
                android:layout_marginTop="10sp"
            >
            </TextView>


                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/check_playing"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="250sp"
                    android:text="playing"
                    android:textColor="#ff4d66"
                    app:buttonTint="#F82C6C">

                </androidx.appcompat.widget.AppCompatCheckBox>

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/chech_gardening"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80sp"
                    android:text="Gardening"
                    app:buttonTint="#ff4d66"
                    android:textColor="#F82C6C"
                    android:layout_below="@+id/check_playing">

                </androidx.appcompat.widget.AppCompatCheckBox>

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/check_writting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="writting"
                    app:buttonTint="#ff4d66"
                    android:textColor="#F82C6C"
                    android:layout_below="@+id/check_playing"
                    android:layout_marginStart="250sp"
                    >

                </androidx.appcompat.widget.AppCompatCheckBox>

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/check_reading"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="80sp"
                    android:text="@string/reading"
                    android:textColor="#ff4d66"
                    app:buttonTint="#F82C6C">

                </androidx.appcompat.widget.AppCompatCheckBox>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Gender:"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginStart="15sp"
                android:letterSpacing="0.09"
                android:layout_marginTop="10sp">

            </TextView>

                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:focusedByDefault="true"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rd_male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="80sp"
                        android:text="Male"
                        android:textColor="#ff4d66"
                        app:buttonTint="#F82C6C">

                    </RadioButton>

                    <RadioButton
                        android:id="@+id/rd_female"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="110sp"
                        android:text="@string/female"
                        android:textColor="#ff4d66"
                        app:buttonTint="#F82C6C">

                    </RadioButton>
                </RadioGroup>
            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/city"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_marginStart="15sp"
                    android:letterSpacing="0.09"
                    android:layout_marginTop="5sp">

                </TextView>

                <Spinner
                    android:id="@+id/city"
                    android:layout_width="298dp"
                    android:layout_height="50sp"
                    android:layout_marginStart="30sp"
                    android:dropDownHorizontalOffset="4dp"
                    android:dropDownVerticalOffset="4dp"
                    android:dropDownSelector="@color/black"
                    android:fadeScrollbars="true"
                    android:dropDownWidth="wrap_content"
                    android:popupBackground="@color/black"
                    android:padding="5dp"

                    >

                </Spinner>

            </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center">
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signupbtn"
        android:layout_width="360sp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:letterSpacing="0.099"
        android:textSize="14sp"
        android:fontFamily="sans-serif"
        android:shadowColor="@color/black"
        android:outlineAmbientShadowColor="@color/black"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        tools:ignore="MissingClass"
        android:background="@drawable/shape"
        >

    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/showdata"
        android:layout_width="360sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape"
        android:gravity="center"
        android:outlineAmbientShadowColor="@color/black"
        android:shadowColor="@color/black"
        android:text="@string/show_data"
        android:textColor="@color/white"
        tools:ignore="MissingClass"

        >

    </androidx.appcompat.widget.AppCompatButton>
</LinearLayout>
    <TextView
        android:id="@+id/Log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account_log_in"
        android:textColor="#696767"
        android:layout_marginStart="100sp"
        android:layout_marginTop="10sp"
        >
    </TextView>
    <TextView
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or_connect_with"
        android:textColor="#696767"
        android:layout_marginTop="20sp"
        >
    </TextView>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10sp"
        android:layout_gravity="center"
        >

        <ImageView
            android:id="@+id/FaceBook"
            android:layout_width="80dp"
            android:layout_height="64dp"
            android:src="@drawable/facebook"

            >

        </ImageView>

        <ImageView
            android:id="@+id/Twitter"
            android:layout_width="80dp"
            android:layout_height="64dp"
            android:src="@drawable/twitter1"
            >

        </ImageView>
        <ImageView
            android:id="@+id/Google"
            android:layout_width="80dp"
            android:layout_height="64dp"
            android:src="@drawable/google"
         >

        </ImageView>
        </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>