<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >

    <androidx.appcompat.widget.AppCompatCheckedTextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30sp"
        android:gravity="center"
        android:text="Password Reset "
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="25sp"
        tools:ignore="MissingConstraints">

    </androidx.appcompat.widget.AppCompatCheckedTextView>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="20sp"
        android:hint="@string/email"
        app:hintTextColor="#ff4d66"
        app:boxStrokeColor="#ff4d66"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/popemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:lines="2"
            android:textColorHint="#ff4d66"
            android:textColor="@color/black"
            >

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout3"
        android:layout_width="330sp"
        android:layout_height="90sp"
        android:layout_marginHorizontal="40dp"
        app:hintTextColor="#ff4d66"
        app:boxStrokeColor="#ff4d66"
        android:layout_marginTop="20sp"
        android:hint="@string/new_password"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/black"

    >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_toggle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLength="10"
            android:textColor="@color/black"
            android:textSize="15sp">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center"

    >

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100sp"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="30sp"
        android:background="@drawable/shape"
        android:text="@string/ok"
        >

    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginStart="200sp"
        android:layout_marginTop="10sp"
        android:background="@drawable/shape"
        android:text="@string/cancel">

    </androidx.appcompat.widget.AppCompatButton>
</RelativeLayout>

</LinearLayout>